syntax = "proto3";

package grpc_proto;

option go_package = "./grpc_eg/proto;grpc_proto";

service Home {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayBye (ByeRequest) returns (ByeReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ByeRequest {
  string name = 1;
}

message ByeReply {
  string message = 1;
}